--- a/app/views/results.scala.html
+++ b/app/views/results.scala.html
@@ -1,201 +1,46 @@
-@(message: String)
+@(message: String, results: List[models.SearchResult])
+
+@*********************
+ * Element block
+ ********************@
+@displayElement(result: models.SearchResult) = {
+	<div class="element @result.resultType" data-resultType="@result.resultType">
+		<p class="ranking">@result.ranking</p>
+		<h3 class="symbol">H</h3>
+		<h2 class="name">@result.name</h2>
+		<p class="source"><a class="source a" href="@result.url">Link</a></p>
+	</div>
+}
 
 @main("UniSearch - Results") {
     
   <section id="options" class="clearfix">
 
   
-      <h3>Filters</h3>
+     <h3>Filters</h3>
 
-      <ul id="filters" class="option-set clearfix" data-option-key="filter">
-        <li><a href="#filter" data-option-value="*" class="selected">show all</a></li>
-        <li><a href="#filter" data-option-value=".metal">metal</a></li>
-        <li><a href="#filter" data-option-value=".transition">transition</a></li>
-        <li><a href="#filter" data-option-value=".post-transition">post-transition</a></li>
-        <li><a href="#filter" data-option-value=".nonmetal">nonmetal</a></li>
-        <li><a href="#filter" data-option-value=".inner-transition">inner-transition</a></li>
-        <li><a href="#filter" data-option-value=".alkali, .alkaline-earth">alkali and alkaline-earth</a></li>
-        <li><a href="#filter" data-option-value=":not(.transition)">not transition</a></li>
-        <li><a href="#filter" data-option-value=".metal:not(.transition)">metal but not transition</a></li>
-      </ul>
-
+     <ul id="filters" class="option-set clearfix" data-option-key="filter">
+		<li><a href="#filter" data-option-value="*" class="selected">show all</a></li>
+		<li><a href="#filter" data-option-value=".script">script</a></li>
+		<li><a href="#filter" data-option-value=".tutorial">tutorial</a></li>
+     </ul>
 
   
     <h3>Sort</h3>
 
     <ul id="sort-by" class="option-set clearfix" data-option-key="sortBy">
-      <li><a href="#sortBy=original-order" data-option-value="original-order" class="selected" data>original-order</a></li>
-      <li><a href="#sortBy=name" data-option-value="name">name</a></li>
-      <li><a href="#sortBy=symbol" data-option-value="symbol">symbol</a></li>
-      <li><a href="#sortBy=number" data-option-value="number">number</a></li>
-      <li><a href="#sortBy=weight"  data-option-value="weight">weight</a></li>
-      <li><a href="#sortBy=category" data-option-value="category">category</a></li>
-      <li><a href="#sortBy=random" data-option-value="random">random</a></li>
+		<li><a href="#sortBy=original-order" data-option-value="original-order" class="selected" data>original-order</a></li>
+ 		<li><a href="#sortBy=ranking" data-option-value="ranking">ranking</a></li>
+		<li><a href="#sortBy=resultType" data-option-value="resultType">category</a></li>
     </ul>
 
 
-</section> <!-- #options -->
+  </section> <!-- #options -->
   
     <div id="container">
-    
-          
-    <div class="element other nonmetal   " data-symbol="H" data-category="other">
-      <p class="number">1</p>
-      <h3 class="symbol">H</h3>
-      <h2 class="name">Hydrogen</h2>
-      <p class="weight">1.00794</p>
-    </div>
-    
-          
-    <div class="element noble-gas nonmetal   " data-symbol="He" data-category="noble-gas">
-      <p class="number">2</p>
-      <h3 class="symbol">He</h3>
-      <h2 class="name">Helium</h2>
-      <p class="weight">4.002602</p>
-    </div>
-    
-          
-    <div class="element alkali metal   " data-symbol="Li" data-category="alkali">
-      <p class="number">3</p>
-      <h3 class="symbol">Li</h3>
-      <h2 class="name">Lithium</h2>
-      <p class="weight">6.941</p>
-    </div>
-    
-          
-    <div class="element alkaline-earth metal   " data-symbol="Be" data-category="alkaline-earth">
-      <p class="number">4</p>
-      <h3 class="symbol">Be</h3>
-      <h2 class="name">Beryllium</h2>
-      <p class="weight">9.012182</p>
-    </div>
-    
-          
-    <div class="element metalloid   " data-symbol="B" data-category="metalloid">
-      <p class="number">5</p>
-      <h3 class="symbol">B</h3>
-      <h2 class="name">Boron</h2>
-      <p class="weight">10.811</p>
-    </div>
-    
-          
-    <div class="element other nonmetal   " data-symbol="C" data-category="other">
-      <p class="number">6</p>
-      <h3 class="symbol">C</h3>
-      <h2 class="name">Carbon</h2>
-      <p class="weight">12.0107</p>
-    </div>
-    
-          
-    <div class="element other nonmetal   " data-symbol="N" data-category="other">
-      <p class="number">7</p>
-      <h3 class="symbol">N</h3>
-      <h2 class="name">Nitrogen</h2>
-      <p class="weight">14.0067</p>
-    </div>
-    
-          
-    <div class="element other nonmetal   " data-symbol="O" data-category="other">
-      <p class="number">8</p>
-      <h3 class="symbol">O</h3>
-      <h2 class="name">Oxygen</h2>
-      <p class="weight">15.9994</p>
-    </div>
-    
-          
-    <div class="element halogen nonmetal   " data-symbol="F" data-category="halogen">
-      <p class="number">9</p>
-      <h3 class="symbol">F</h3>
-      <h2 class="name">Fluorine</h2>
-      <p class="weight">18.9984032</p>
-    </div>
-    
-          
-    <div class="element noble-gas nonmetal   " data-symbol="Ne" data-category="noble-gas">
-      <p class="number">10</p>
-      <h3 class="symbol">Ne</h3>
-      <h2 class="name">Neon</h2>
-      <p class="weight">20.1797</p>
-    </div>
-    
-          
-    <div class="element alkali metal   " data-symbol="Na" data-category="alkali">
-      <p class="number">11</p>
-      <h3 class="symbol">Na</h3>
-      <h2 class="name">Sodium</h2>
-      <p class="weight">22.98976928</p>
-    </div>
-    
-          
-    <div class="element alkaline-earth metal   " data-symbol="Mg" data-category="alkaline-earth">
-      <p class="number">12</p>
-      <h3 class="symbol">Mg</h3>
-      <h2 class="name">Magnesium</h2>
-      <p class="weight">24.305</p>
-    </div>
-    
-          
-    <div class="element post-transition metal   " data-symbol="Al" data-category="post-transition">
-      <p class="number">13</p>
-      <h3 class="symbol">Al</h3>
-      <h2 class="name">Aluminium</h2>
-      <p class="weight">26.9815386</p>
-    </div>
-    
-          
-    <div class="element metalloid   " data-symbol="Si" data-category="metalloid">
-      <p class="number">14</p>
-      <h3 class="symbol">Si</h3>
-      <h2 class="name">Silicon</h2>
-      <p class="weight">28.0855</p>
-    </div>
-    
-          
-    <div class="element other nonmetal   " data-symbol="P" data-category="other">
-      <p class="number">15</p>
-      <h3 class="symbol">P</h3>
-      <h2 class="name">Phosphorus</h2>
-      <p class="weight">30.973762</p>
-    </div>
-    
-          
-    <div class="element other nonmetal   " data-symbol="S" data-category="other">
-      <p class="number">16</p>
-      <h3 class="symbol">S</h3>
-      <h2 class="name">Sulfur</h2>
-      <p class="weight">32.065</p>
-    </div>
-    
-          
-    <div class="element halogen nonmetal   " data-symbol="Cl" data-category="halogen">
-      <p class="number">17</p>
-      <h3 class="symbol">Cl</h3>
-      <h2 class="name">Chlorine</h2>
-      <p class="weight">35.453</p>
-    </div>
-    
-          
-    <div class="element noble-gas nonmetal   " data-symbol="Ar" data-category="noble-gas">
-      <p class="number">18</p>
-      <h3 class="symbol">Ar</h3>
-      <h2 class="name">Argon</h2>
-      <p class="weight">39.948</p>
-    </div>
-    
-          
-    <div class="element alkali metal   " data-symbol="K" data-category="alkali">
-      <p class="number">19</p>
-      <h3 class="symbol">K</h3>
-      <h2 class="name">Potassium</h2>
-      <p class="weight">39.0983</p>
-    </div>
-    
-          
-    <div class="element alkaline-earth metal   " data-symbol="Ca" data-category="alkaline-earth">
-      <p class="number">20</p>
-      <h3 class="symbol">Ca</h3>
-      <h2 class="name">Calcium</h2>
-      <p class="weight">40.078</p>
-    </div>
+
+	@for(result <- results) {
+		@displayElement(result)
+	}
 
 }
