--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -166,7 +166,7 @@ body {
 }
 
 .element {
-  width: 110px;
+  width: 180px;
   height: 110px;
   margin: 5px;
   float: left;
@@ -206,25 +206,22 @@ body {
   margin: 0;
 }
 
-.element .symbol {
-  left: 0.2em;
-  top: 0.4em;
-  font-size: 3.8em;
+.element .department {
+  left: 0.3em;
+  top: 0.3em;
+  font-size: 2.0em;
   line-height: 1.0em;
   color: #FFF;
 }
-.element.large .symbol {
-  font-size: 4.5em;
-}
 
-.element.fake .symbol {
-  color: #000;
+.element.large .department {
+  font-size: 2.0em;
 }
 
 .element .name {
   left: 0.5em;
-  bottom: 1.6em;
-  font-size: 1.05em;
+  bottom: 2.3em;
+  font-size: 1.55em;
 }
 
 .element .weight {
