Added description field which is displayed on click

--- a/app/views/results.scala.html
+++ b/app/views/results.scala.html
@@ -8,6 +8,7 @@
 		<p class="ranking">@result.ranking</p>
 		<h3 class="department">@result.department</h3>
 		<h2 class="name">@result.name</h2>
+		<p class="description">This is a description</p>
 		<p class="source"><a class="source a" href="@result.url">Link</a></p>
 	</div>
 }
