Added tags field

--- a/app/views/admin.scala.html
+++ b/app/views/admin.scala.html
@@ -11,6 +11,7 @@
             @helper.inputText(myForm("title"))
             @helper.inputText(myForm("department"))
             @helper.inputText(myForm("link"))
+            @helper.inputText(myForm("tags"))
             <input type="submit" value=" Submit ">
             <input type="reset" value=" Reset">
     }
