--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -2,10 +2,11 @@
 
 @main("UniSearch - Find your stuff... faster") {
     
+    <div class="container">
 	<form name="formSearch" action="/search" method="GET">
 		<div align="center">
 		    <input name="query" type="text"  size="40" value="Search..." >
-            <input type="submit" value="Search" />
+            <input type="submit" value="Search" class="btn btn-primary" />
 	    </div>
-    
+    </div>
 }
