--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -5,13 +5,65 @@
 <html>
     <head>
         <title>@title</title>
+        <!-- starter template http://twitter.github.com/bootstrap/examples/starter-template.html -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Search Engine for Universities">
+        <meta name="author" content="Muki, Tidel">
+
+        <!-- Le styles -->
+        <link href="@routes.Assets.at("stylesheets/bootstrap.css")" rel="stylesheet">
+        <style>
+              body {
+                padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+              }
+        </style>
         <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@routes.Assets.at("images/favicon.png")">
-        <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-		<script src="@routes.Assets.at("javascripts/jquery.isotope.min.js")" type="text/javascript"></script>
-		<script src="@routes.Assets.at("javascripts/results.js")" type="text/javascript"></script>
     </head>
     <body>
-        @content
+        <div class="navbar navbar-inverse navbar-fixed-top">
+            <div class="navbar-inner">
+                <div class="container">
+                    <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </a>
+                    <a class="brand" href="/">UniSearch</a>
+                    <div class="nav-collapse collapse">
+                        <ul class="nav">
+                            <li><a href="/admin">Admin</a></li>
+                            <li><a href="#about">About</a></li>
+                            <li><a href="#contact">Contact</a></li>
+                        </ul>
+                    </div><!--/.nav-collapse -->
+                </div>
+            </div>
+        </div>
+
+    <div>
+             @content
+    </div><!--/container-->
+       
+
+        <!-- Le javascript -->
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/jquery.isotope.min.js")" type="text/javascript"></script>
+        <script src="@routes.Assets.at("javascripts/results.js")" type="text/javascript"></script>
+        
+        <script src="@routes.Assets.at("javascripts/bootstrap-transition.js")"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-alert.js")"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-modal.js")"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-dropdown.js")"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-scrollspy.js")"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-tab.js")"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-tooltip.js")"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-popover.js")"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-button.js")"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-collapse.js")"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-carousel.js")"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap-typeahead.js")"></script> <!-- -->
     </body>
 </html>
