--- a/app/views/results.scala.html
+++ b/app/views/results.scala.html
@@ -14,7 +14,7 @@
 }
 
 @main("UniSearch - Results") {
-    
+  <div class="container">
   <section id="options" class="clearfix">
 
   
@@ -42,5 +42,5 @@
 	@for(result <- results) {
 		@displayElement(result)
 	}
-
+  </div>
 }
