--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -12,7 +12,8 @@
         <meta name="author" content="Muki, Tidel">
 
         <!-- Le styles -->
-        <link href="@routes.Assets.at("stylesheets/bootstrap.css")" rel="stylesheet">
+        <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap/bootstrap.min.css")" />
+        <!-- <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/bootstrap/bootstrap.css")" > -->
         <style>
               body {
                 padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -49,21 +50,10 @@
 
         <!-- Le javascript -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="@routes.Assets.at("javascripts/jquery-1.7.1.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/jquery.isotope.min.js")" type="text/javascript"></script>
-        <script src="@routes.Assets.at("javascripts/results.js")" type="text/javascript"></script>
-        
-        <script src="@routes.Assets.at("javascripts/bootstrap-transition.js")"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap-alert.js")"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap-modal.js")"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap-dropdown.js")"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap-scrollspy.js")"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap-tab.js")"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap-tooltip.js")"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap-popover.js")"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap-button.js")"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap-collapse.js")"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap-carousel.js")"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap-typeahead.js")"></script> <!-- -->
+        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap.min.min.js")"></script>
+        <script src="@routes.Assets.at("javascripts/jquery-1.8.3.min.min.js")"></script>
+        <script src="@routes.Assets.at("javascripts/jquery.isotope.min.min.js")"></script>
+        <script src="@routes.Assets.at("javascripts/results.min.js")"></script>
     </body>
 </html>
