Removed less files. Compiling won't work. Added normal twitter bootstrap files. Will be fine for the beginning

--- a/app/views/index.scala.html
+++ b/app/views/index.scala.html
@@ -5,7 +5,7 @@
     <div class="container">
 	<form name="formSearch" action="/search" method="GET">
 		<div align="center">
-		    <input name="query" type="text"  size="40" value="Search..." >
+		    <input name="query" type="text"  size="40" value="Search..." style="margin: 5px;" >
             <input type="submit" value="Search" class="btn btn-primary" />
 	    </div>
     </div>
