--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -13,8 +13,8 @@
 
         <!-- Le styles -->
         @minified=@{ if (play.Play.isProd()) ".min" else "" }
-        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap/bootstrap"+ minified + ".css")">
-        <!-- <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap/responsive"+ minified + ".css")"> -->
+        <link rel="stylesheet" href="@routes.Assets.at("stylesheets/bootstrap"+ minified + ".css")">
+        <!-- <link rel="stylesheet" href="@routes.Assets.at("stylesheets/responsive"+ minified + ".css")"> -->
 
         <style>
               body {
@@ -52,10 +52,9 @@
 
         <!-- Le javascript -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="@routes.Assets.at("javascripts/bootstrap.min.js")"></script>
-        <script src="@routes.Assets.at("javascripts/bootstrap.min.min.js")"></script>
-        <script src="@routes.Assets.at("javascripts/jquery-1.8.3.min.min.js")"></script>
-        <script src="@routes.Assets.at("javascripts/jquery.isotope.min.min.js")"></script>
-        <script src="@routes.Assets.at("javascripts/results.min.js")"></script>
+        <script src="@routes.Assets.at("javascripts/jquery-1.8.3.min.js")"></script>
+        <script src="@routes.Assets.at("javascripts/jquery.isotope.min.js")"></script>
+        <script src="@routes.Assets.at("javascripts/bootstrap" + minified + ".js")"></script>
+        <script src="@routes.Assets.at("javascripts/results.js")"></script>
     </body>
 </html>
